tests/suite/fail/regression/reg_mut_borrow_14.ny
fn main() {
    let mut n = 14
    let r = &mut n
    n = n + 1 //~ ERROR because it is borrowed
    print(r)
}
